fix icon sidebar

--- a/client/src/components/sidebar/SideBar.css
+++ b/client/src/components/sidebar/SideBar.css
@@ -24,7 +24,7 @@ main {
 .top_section {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   padding: 15px 10px;
 }
 .logo {
@@ -44,11 +44,15 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   width: 30px;
   cursor: pointer;
 }
 .icon-bars {
   font-size: 20px;
+}
+.icon-tab{
+  font-size: 18px;
 }
 .hide {
   display: none;
