--- a/client/src/index.css
+++ b/client/src/index.css
@@ -450,6 +450,9 @@ select option {
   border-radius: 50%;
   background-color: white;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .form-btn-exit:hover {
   background-color: rgb(255, 227, 209);
