--- a/client/src/pages/sales/Sales.css
+++ b/client/src/pages/sales/Sales.css
@@ -49,7 +49,7 @@
 }
 
 .sales-card {
-  height: 280px;
+  min-height: 280px;
   position: relative;
   border-radius: 5px;
   border: 1px solid #ccc;
@@ -276,6 +276,12 @@
   font-weight: bold;
   margin: 0 10px;
   font-size: 18px;
+}
+
+.sales-list-products{
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 8px;
 }
 
 
