--- a/client/src/pages/account/Account.css
+++ b/client/src/pages/account/Account.css
@@ -48,7 +48,7 @@
 }
 
 .userUpdate {
-  flex: 2;
+  min-width: 500px;
   padding: 20px;
   -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
@@ -63,8 +63,8 @@
 }
 
 .userShowImg {
-  width: 40px;
-  height: 40px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -115,10 +115,95 @@
   font-size: 14px !important;
   padding: 0 10px !important;
 }
+.userUpdateTitle {
+  font-size: 24px;
+  font-weight: 600;
+  opacity: 0.7;
+}
+
+.userUpdateForm {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.userUpdateItem {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.userUpdateItem > label {
+  margin-bottom: 0px;
+  font-size: 14px;
+}
+
+.userUpdateInput {
+  border: none;
+  width: 250px;
+  height: 30px;
+  border-bottom: 1px solid gray;
+}
+
+.userUpdateRight {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.userUpdateUpload {
+  display: flex;
+  align-items: center;
+}
+
+.userUpdateImg {
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  object-fit: cover;
+  margin-right: 20px;
+}
+
+.userUpdateIcon {
+  cursor: pointer;
+}
+
+.userUpdateButton {
+  border-radius: 5px;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  background-color: darkblue;
+  color: white;
+  font-weight: 600;
+}
+
+@keyframes opacity {
+  from {
+    transform: translate(-5%, 0%);
+    opacity: 0.5;
+  }
+  to {
+    opacity: 1;
+    transform: translate(0%, 0%);
+  }
+}
+
+@keyframes trans {
+  from {
+    opacity: 0;
+    transform: translate(-15%, 0%);
+  }
+  to {
+    transform: translate(0, 0%);
+    opacity: 1;
+  }
+}
+
 .account_header {
   display: flex;
-  justify-content: space-around;
-  padding: 20px;
+  justify-content: space-between;
+  padding: 20px 40px;
 }
 .account_header-control {
   display: flex;
